--- a/index.html
+++ b/index.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
-<head>
+  <head>
     <title>Senior Software Engineer - Petar Milutinovic</title>
-    <link rel="icon" href="images/favicon.png">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
-    <meta charset="utf-8">
-    <meta name="description" content="Website of Petar Milutinovic, Senior Software Engineer and Solution Architect specialized in Javascript and Cloud Development. Currently living and working in Munich - Germany">
-    <meta name="author" contant="Petar Milutinovic, www.petarmilutinovic.com">
-    <meta property="og:title" content="Petar Milutinovic - Senior Software Engineer" />
+    <link rel="icon" href="images/favicon.png" />
+    <meta
+      name="viewport"
+      content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"
+    />
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Website of Petar Milutinovic, Senior Software Engineer and Solution Architect specialized in Javascript and Cloud Development. Currently living and working in Munich - Germany"
+    />
+    <meta name="author" contant="Petar Milutinovic, www.petarmilutinovic.com" />
+    <meta
+      property="og:title"
+      content="Petar Milutinovic - Senior Software Engineer"
+    />
     <meta property="og:url" content="http://www.petarmilutinovic.com" />
     <meta property="og:site_name" content="PetarMilutinovic.com" />
-    <meta property="og:description" content="Website of Petar Milutinovic, Senior Software Engineer and Solution Architect specialized in Javascript and Cloud Development. Currently living and working in Munich - Germany" />
-    <link href="assets/css/screen.css" rel="stylesheet">
-</head>
+    <meta
+      property="og:description"
+      content="Website of Petar Milutinovic, Senior Software Engineer and Solution Architect specialized in Javascript and Cloud Development. Currently living and working in Munich - Germany"
+    />
+    <link href="assets/css/main.css" rel="stylesheet" />
+  </head>
 
-<body>
-<main>
-    <div class="logo"><img src="assets/images/logo.svg" alt="Petar Dev Logo" /></div>
-</main>
-</body>
+  <body>
+    <main>
+      <div class="logo">
+        <img src="assets/images/logo.svg" alt="Petar Dev Logo" />
+      </div>
+    </main>
+  </body>
 </html>
